# bettertest-xml-module

./: CMakeLists.txt  readme.md
include/bettertest_xml/: xml_exporter.h  xml_importer.h
src/: xml_exporter.cpp  xml_importer.cpp
